--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: tvnao
 Maintainer: blaze <blaze@vivaldi.net>
 Section: python
 Priority: optional
-Build-Depends: dh-python, python3-setuptools, python3, debhelper (>= 11), pkg-config, python2-minimal
+Build-Depends: dh-python, python3-setuptools, python3-all, debhelper-compat (= 12)
 Standards-Version: 4.5.0
 Homepage: https://launchpad.net/tvnao
 
