--- a/debian/rules
+++ b/debian/rules
@@ -1,7 +1,7 @@
 #!/usr/bin/make -f
 
 %:
-	dh $@ --with python3
+	dh $@  --with python3 --buildsystem pybuild
 
 override_dh_auto_install:
 	python3 setup.py install --root=debian/tvnao --install-layout=deb --install-lib=/usr/share/tvnao --install-scripts=/usr/share/tvnao/tvnao
